[luxom] completed initial version of luxom.io binding - changes after review of @wborn
Signed-off-by: Kris Jespers <kriasoft@telenet.be>